--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                         <div id="skill" class="card-content">
                             <div class="card-top py-4 d-flex align-items-center justify-content-between">
                                 <h3 class="card-title">Skill</h3>
-                                <i class="bi bi-briefcase font-icon"></i>
+                                <i class="bi bi-tools font-icon"></i>
                             </div>
                             <div class="card-body around">
                                 <ul class="card-list list-unstyled skill-list">
@@ -193,7 +193,7 @@
                         <div class="card-content education">
                             <div class="card-top py-4 d-flex align-items-center justify-content-between">
                                 <h3 class="card-title">Học vấn</h3>
-                                <i class="bi bi-briefcase font-icon"></i>
+                                <i class="bi bi-pencil font-icon"></i>
                             </div>
                             <div class="card-body around">
                                 <ul class="card-list list-unstyled">
@@ -215,7 +215,7 @@
                         <div class="card-content">
                             <div class="card-top py-4 d-flex align-items-center justify-content-between">
                                 <h3 class="card-title">Ngôn ngữ</h3>
-                                <i class="bi bi-briefcase font-icon"></i>
+                                <i class="bi bi-mic font-icon"></i>
                             </div>
                             <div class="card-body around">
                                 <ul class="card-list list-unstyled skill-list">
