--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="container">
                     <img src="./image/banner.jpg" alt="" class="img-fluid d-sm-block">
                     <div class="text-center text-white position-absolute top-50 start-50 translate-middle">
-                        <h1 class="mb-3">Nguyen Dat Anh</h1>
+                        <h1 class="mb-3">Nguyễn Đạt Anh</h1>
                         <span class="">deleveper Fullstack</span>
                     </div>
                 </div>
